--- a/src/main/resources/static/InstituteImplementation.html
+++ b/src/main/resources/static/InstituteImplementation.html
@@ -205,73 +205,96 @@
         <h1>Institute Implementation</h1>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Class Implementation</a></li>
+                <li class="breadcrumb-item"><a href="#">Institute Implementation</a></li>
                 <li class="breadcrumb-item">Institute</li>
             </ol>
         </nav>
     </div><!-- End Page Title -->
     <section class="section">
+
         <div class="row">
+            <div class="col-10"></div>
+            <div class="d-grid gap-2 col-2 mx-auto mb-1">
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#basicModal">
+                    Add New Institute
+                </button>
+            </div>
+        </div>
 
+        <!-- Modal -->
+        <div class="modal fade" id="basicModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="staticBackdropLabel">Add New institute</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
 
-            <div class="col-lg-6">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="row">
+                                    <div class="col-lg-6">
+                                        <div class="card">
+                                            <div class="card-body">
+                                                <div class="row">
 
-                            <!-- Floating Labels Form -->
-                            <form onsubmit="return false" class="row g-3">
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <input onkeyup="textFieldValidator(floatingInsName,'','institute','inst_name','old_institute')" type="text" class="form-control" id="floatingInsName"
-                                               placeholder="Your Name">
-                                        <label for="floatingInsName">Institute Name</label>
+                                                    <!-- Floating Labels Form -->
+                                                    <form onsubmit="return false" class="row g-3">
+                                                        <div class="col-md-6">
+                                                            <div class="form-floating">
+                                                                <input onkeyup="textFieldValidator(floatingInsName,'','institute','inst_name','old_institute')" type="text" class="form-control" id="floatingInsName"
+                                                                       placeholder="Your Name">
+                                                                <label for="floatingInsName">Institute Name</label>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-6">
+                                                            <div class="form-floating">
+                                                                <input onkeyup="textFieldValidator(floatingLocation,'','institute','location','old_institute')" type="text" class="form-control" id="floatingLocation"
+                                                                       placeholder="Your Name">
+                                                                <label for="floatingLocation">Location</label>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-6">
+                                                            <div class="form-floating">
+                                                                <input onkeyup="textFieldValidator(floatingMobile,'^[0][7,1,3][0-8][0-9]{7}$','institute','contact_number','old_institute')" type="text" class="form-control" id="floatingMobile"
+                                                                       placeholder="Your Name">
+                                                                <label for="floatingMobile">Mobile Number</label>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-6">
+                                                            <div class="form-floating">
+                                                                <input onkeyup="textFieldValidator(floatingEmail,'^[a-z0-9]+@[a-z]+\.[a-z]{2,3}$','institute','email','old_institute')" type="email" class="form-control" id="floatingEmail"
+                                                                       placeholder="Your Email">
+                                                                <label for="floatingEmail">Email</label>
+                                                            </div>
+                                                        </div>
+
+                                                        <div class="col-md-6">
+                                                            <div class="form-floating mb-3">
+                                                                <select onchange="selectValidater(floatingSelectInsStatus,'','institute','institute_status_id','old_institute')" class="form-select" id="floatingSelectInsStatus" aria-label="State">
+                                                                    <option selected>Select Status</option>
+
+                                                                </select>
+                                                                <label for="floatingSelectInsStatus">Status</label>
+                                                            </div>
+                                                        </div>
+                                                    </form><!-- End floating Labels Form -->
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <input onkeyup="textFieldValidator(floatingLocation,'','institute','location','old_institute')" type="text" class="form-control" id="floatingLocation"
-                                               placeholder="Your Name">
-                                        <label for="floatingLocation">Location</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <input onkeyup="textFieldValidator(floatingMobile,'^[0][7,1,3][0-8][0-9]{7}$','institute','contact_number','old_institute')" type="text" class="form-control" id="floatingMobile"
-                                               placeholder="Your Name">
-                                        <label for="floatingMobile">Mobile Number</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <input onkeyup="textFieldValidator(floatingEmail,'^[a-z0-9]+@[a-z]+\.[a-z]{2,3}$','institute','email','old_institute')" type="email" class="form-control" id="floatingEmail"
-                                               placeholder="Your Email">
-                                        <label for="floatingEmail">Email</label>
-                                    </div>
-                                </div>
 
-                                <div class="col-md-6">
-                                    <div class="form-floating mb-3">
-                                        <select onchange="selectValidater(floatingSelectInsStatus,'','institute','institute_status_id','old_institute')" class="form-select" id="floatingSelectInsStatus" aria-label="State">
-                                            <option selected>Select Status</option>
-
-                                        </select>
-                                        <label for="floatingSelectInsStatus">Status</label>
-                                    </div>
-                                </div>
-
-                                <div class="text-center">
-                                    <button onclick="buttonAddMc()" type="submit" class="btn btn-primary" id="addbtn">Add Institute</button>
-                                    <button type="submit" onclick="buttonUpdateMC()" class="btn btn-secondary" id="updatebtn">Update Institute</button>
-                                </div>
-                            </form><!-- End floating Labels Form -->
-                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button onclick="buttonAddMc()" type="submit" class="btn btn-primary" id="addbtn">Add Institute</button>
+                        <button type="submit" onclick="buttonUpdateMC()" class="btn btn-secondary" id="updatebtn">Update Institute</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
+        </div>
 
+        <div class="row">
 
-            <div class="col-lg-6">
+            <div class="col-lg-12">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Student table</h5>
