--- a/src/main/resources/static/Student.html
+++ b/src/main/resources/static/Student.html
@@ -51,6 +51,8 @@
     <link rel="stylesheet" href="assets/Resourse/fontawesome/fontawesome-free-6.2.0-web/css/all.css">
 
 
+
+
 </head>
 
 <body>
@@ -202,7 +204,7 @@
 <main id="main" class="main">
 
     <div class="pagetitle">
-        <h1>Add Student</h1>
+        <h1>Student Manage</h1>
         <nav>
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">Home</a></li>
@@ -212,86 +214,108 @@
     </div><!-- End Page Title -->
     <section class="section">
         <div class="row">
+           <div class="col-10"></div>
+           <div class="d-grid gap-2 col-2 mx-auto mb-1">
+               <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#basicModal">
+                   Add New Student
+               </button>
+           </div>
+        </div>
 
+        <!-- Modal -->
+        <div class="modal fade" id="basicModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="col-lg-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <div class="row">
 
-            <div class="col-lg-6">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="row">
-
-                            <!-- Floating Labels Form -->
-                            <form onsubmit="return false" class="row g-3">
-                                <div class="col-md-12">
-                                    <div class="form-floating">
-                                        <input onkeyup="textFieldValidator(floatingFName,'^[A-Z][a-z]{2,}(?: [A-Z][a-z]*)*$','student','first_name','old_student')" type="text" class="form-control" id="floatingFName"
-                                               placeholder="Your Name">
-                                        <label for="floatingFName">First Name</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="form-floating">
-                                        <input onkeyup="textFieldValidator(floatingLName,'^[A-Z][a-z]{2,}(?: [A-Z][a-z]*)*$','student','last_name','old_student')" type="text" class="form-control" id="floatingLName"
-                                               placeholder="Your Name">
-                                        <label for="floatingLName">Last Name</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="form-floating">
-                                        <input type="date" onchange="dateFeildValidate(floatingDOB,'','student','dob','old_student')" class="form-control" id="floatingDOB"
-                                               placeholder="Your DOB">
-                                        <label for="floatingDOB">Date of Birth</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="form-floating">
-                                        <input onkeyup="textFieldValidator(floatingEmail,'^[a-z0-9]+@[a-z]+\.[a-z]{2,3}$','student','email','old_student')" type="email" class="form-control" id="floatingEmail"
-                                               placeholder="Your Email">
-                                        <label for="floatingEmail">Email</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-floating">
+                                        <!-- Floating Labels Form -->
+                                        <form onsubmit="return false" class="row g-3">
+                                            <div class="col-md-6">
+                                                <div class="form-floating">
+                                                    <input onkeyup="textFieldValidator(floatingFName,'^[A-Z][a-z]{2,}(?: [A-Z][a-z]*)*$','student','first_name','old_student')" type="text" class="form-control" id="floatingFName"
+                                                           placeholder="Your Name">
+                                                    <label for="floatingFName">First Name</label>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <div class="form-floating">
+                                                    <input onkeyup="textFieldValidator(floatingLName,'^[A-Z][a-z]{2,}(?: [A-Z][a-z]*)*$','student','last_name','old_student')" type="text" class="form-control" id="floatingLName"
+                                                           placeholder="Your Name">
+                                                    <label for="floatingLName">Last Name</label>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <div class="form-floating">
+                                                    <input type="date" onchange="dateFeildValidate(floatingDOB,'','student','dob','old_student')" class="form-control" id="floatingDOB"
+                                                           placeholder="Your DOB">
+                                                    <label for="floatingDOB">Date of Birth</label>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <div class="form-floating">
+                                                    <input onkeyup="textFieldValidator(floatingEmail,'^[a-z0-9]+@[a-z]+\.[a-z]{2,3}$','student','email','old_student')" type="email" class="form-control" id="floatingEmail"
+                                                           placeholder="Your Email">
+                                                    <label for="floatingEmail">Email</label>
+                                                </div>
+                                            </div>
+                                            <div class="col-6">
+                                                <div class="form-floating">
                                         <textarea onkeyup="textFieldValidator(floatingTextarea,'','student','address','old_student')" class="form-control" placeholder="Address" id="floatingTextarea"
                                                   style="height: 100px;"></textarea>
-                                        <label for="floatingTextarea">Address</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <input onkeyup="textFieldValidator(floatingMobile,'^[0][7][0,1,2,4,5,6,7,8][0-9]{7}$','student','mobile_number','old_student')" type="text" class="form-control" id="floatingMobile"
-                                               placeholder="Your Mobile">
-                                        <label for="floatingMobile">Mobile Number</label>
-                                    </div>
-                                </div>
+                                                    <label for="floatingTextarea">Address</label>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <div class="form-floating">
+                                                    <input onkeyup="textFieldValidator(floatingMobile,'^[0][7][0,1,2,4,5,6,7,8][0-9]{7}$','student','mobile_number','old_student')" type="text" class="form-control" id="floatingMobile"
+                                                           placeholder="Your Mobile">
+                                                    <label for="floatingMobile">Mobile Number</label>
+                                                </div>
+                                            </div>
 
-                                <div class="col-md-6">
-                                    <div class="form-floating mb-3">
-                                        <select onchange="selectValidater(floatingSelect,'','student','student_status_id','old_student')" class="form-select" id="floatingSelect" aria-label="State">
-                                            <option selected>Select Status</option>
-                                        </select>
-                                        <label for="floatingSelect">Status</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="form-floating">
-                                        <input onkeyup="textFieldValidator(floatingSPassword,'','student','st_password','old_student')" type="Password" class="form-control" id="floatingSPassword"
-                                               placeholder="Your Name">
-                                        <label for="floatingSPassword">Create Password</label>
-                                    </div>
-                                </div>
+                                            <div class="col-md-6">
+                                                <div class="form-floating mb-3">
+                                                    <select onchange="selectValidater(floatingSelect,'','student','student_status_id','old_student')" class="form-select" id="floatingSelect" aria-label="State">
+                                                        <option selected>Select Status</option>
+                                                    </select>
+                                                    <label for="floatingSelect">Status</label>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <div class="form-floating">
+                                                    <input onkeyup="textFieldValidator(floatingSPassword,'','student','st_password','old_student')" type="Password" class="form-control" id="floatingSPassword"
+                                                           placeholder="Your Name">
+                                                    <label for="floatingSPassword">Create Password</label>
+                                                </div>
+                                            </div>
 
-                                <div class="text-center">
-                                    <button onclick="buttonAddMc()" type="submit" class="btn btn-primary" id="addbtn">Add Student</button>
-                                    <button type="submit" onclick="buttonUpdateMC()" class="btn btn-secondary" id="updatebtn">Update Student</button>
+                                        </form><!-- End floating Labels Form -->
+                                    </div>
                                 </div>
-                            </form><!-- End floating Labels Form -->
+                            </div>
                         </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button onclick="buttonAddMc()" type="submit" class="btn btn-primary" id="addbtn">Add Student</button>
+                        <button type="submit" onclick="buttonUpdateMC()" class="btn btn-secondary" id="updatebtn">Update Student</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
+        </div>
 
 
-            <div class="col-lg-6">
+        <div class="row">
+
+            <div class="col-lg-12">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Student table</h5>
